# SlicerClassAnnotation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
ClassAnnotation/: CMakeLists.txt  ClassAnnotation.py
ClassAnnotation/ClassAnnotationLib/: ClassAnnotationUIUtils.py  ClassAnnotationUtils.py
ClassAnnotation/Resources/UI/: ClassAnnotation.ui
